@@ -1,5 +1,9 @@
 2005-11-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
+	* unix/tkUnixSelect.c (SelCvtToX, SelCvtFromX): Backport of fixes for
+	* generic/tkSelect.c (TkSelDefaultSelection):	"spaces in atom names"
+	* tests/select.test (select-9.5):		problems. [Bug 1353414]
+
 	* library/tkfbox.tcl (::tk::dialog::file::): Correct the quoting of
 	the script used in variable traces so that widget names with spaces in
 	will work. [Bug 1335485]
